StarSpan ChangeLog
$Id$


2008-07-24 (1.2.03) 
    - Fix of bug [200376] Projections do not match under GDAL 1.4:
      Flag --validate_inputs added.
      By default, starspan will not prevalidate the various input elements for
      consistent projection info. This flag enables this check.
      (Environment variable STARSPAN_NO_VALIDATE_INPUTS no longer used).
      
      gui/base_dist/bin/starspan.guie updated.
      
    - MinGW build successful using 1.5.2.
      See http://starspan.casil.ucdavis.edu/doku/doku.php?id=mingw
      
    - New binaries/windows/mingw_prepare_binaries.sh to facilitate preparation
      of windows release.
    
2008-07-19
    - some fixes with new naming mechanism with suffixes.
    - Using new version of GuiE that fully shows the output of
    `sys-commands` in text components.
    
2008-07-18 
    - Various adjustments to create Windows releases.
    

2008-07-08 (1.2.01) alpha release.

2008-07-07 (starting versions 1.2.xx)

    NOTE: Several changes in command line interface.

    - Removed old stuff that hasn't been tested for a long time.
      The following options have been removed:
            --raster_directory <directory>
            --update-csv <filename>
            --envi <name>
            --envisl <name>
            --speclib <filename>
            --calbase <link> <filename> [<stats>...]
            
       Renamed options:
            --duplicate_pixel      ->  --duplicate
            --report_elapsed_time  ->  --elapsed_time
            
       Added options according to new command line interface, some of which
       replace corresponding pre-existing options in the old style:
       
		    --out-prefix <string>                --out-type <type>
		    --table-suffix <string>
		    --summary-suffix <string>            --stats <stat> <stat>
            --class-summary-suffix <string>
		    --mr-img-suffix <string>             --mini_raster_parity <parity>