@@ -4,7 +4,7 @@
 # $Id$
 ###########################################################
 
-STARSPAN_VERSION= 1.2.03
+STARSPAN_VERSION= 1.2.04
 
 # Windows StarSpan GUI version
 VERSION= ${STARSPAN_VERSION}
