@@ -9,7 +9,7 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_PATH_PROGS(SH, sh)
 AC_PROG_INSTALL
-STARSPAN_VERSION=1.2.03
+STARSPAN_VERSION=1.2.04
 AM_INIT_AUTOMAKE(starspan,$STARSPAN_VERSION)
 AC_SUBST(STARSPAN_VERSION)
 AC_CONFIG_HEADERS(src/config.h)
